chore: Update config, dependencies, and theme
- Update app.json configuration
- Add eas.json for EAS Build
- Update dependencies in package.json
- Enhance theme constants
- Update gitignore and env example

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ EXPO_PUBLIC_AMPLITUDE_KEY=your_amplitude_key
 
 # Sentry Error Tracking (optional)
 EXPO_PUBLIC_SENTRY_DSN=https://your-sentry-dsn
+
+# RevenueCat (Apple IAP) - Get from app.revenuecat.com
+EXPO_PUBLIC_REVENUECAT_API_KEY=appl_your_key_here
