--- a/package.json
+++ b/package.json
@@ -4,45 +4,71 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint ."
   },
   "dependencies": {
     "@amplitude/analytics-react-native": "^1.5.32",
     "@clerk/clerk-expo": "^2.19.14",
+    "@expo-google-fonts/bebas-neue": "^0.4.1",
+    "@expo-google-fonts/rajdhani": "^0.4.1",
+    "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@sentry/react-native": "^7.8.0",
+    "@react-native-community/netinfo": "11.4.1",
+    "@sentry/react-native": "~7.2.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-preset-expo": "^54.0.9",
-    "expo": "~54.0.30",
+    "expo": "~54.0.33",
     "expo-auth-session": "^7.0.10",
+    "expo-clipboard": "~8.0.8",
     "expo-constants": "^18.0.12",
     "expo-crypto": "^15.0.8",
+    "expo-dev-client": "~6.0.20",
+    "expo-document-picker": "~14.0.8",
+    "expo-file-system": "~19.0.21",
+    "expo-font": "~14.0.11",
     "expo-haptics": "^15.0.8",
-    "expo-image": "^3.0.11",
+    "expo-image": "~3.0.11",
+    "expo-image-picker": "~17.0.10",
+    "expo-linear-gradient": "~15.0.8",
     "expo-linking": "^8.0.11",
-    "expo-router": "^6.0.21",
+    "expo-media-library": "~18.2.1",
+    "expo-notifications": "~0.32.16",
+    "expo-router": "~6.0.23",
     "expo-secure-store": "^15.0.8",
     "expo-status-bar": "~3.0.9",
+    "expo-tracking-transparency": "~6.0.8",
+    "expo-updates": "~29.0.16",
     "expo-web-browser": "^15.0.10",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-gesture-handler": "^2.30.0",
+    "react-native-confetti-cannon": "^1.5.2",
+    "react-native-device-info": "^15.0.1",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-markdown-display": "^7.0.2",
     "react-native-mmkv": "^4.1.0",
-    "react-native-reanimated": "^4.2.1",
+    "react-native-nitro-modules": "^0.33.3",
+    "react-native-purchases": "^9.7.5",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.19.0",
-    "react-native-worklets": "^0.7.1",
+    "react-native-screens": "~4.16.0",
+    "react-native-sse": "^1.2.1",
+    "react-native-svg": "^15.15.3",
+    "react-native-worklets": "0.5.1",
     "tailwindcss": "^4.1.18",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
+    "@expo/ngrok": "^4.1.3",
     "@types/react": "~19.1.0",
     "typescript": "~5.9.2"
+  },
+  "overrides": {
+    "@react-native-async-storage/async-storage": "^2.2.0"
   },
   "private": true
 }
